# school-search

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  Taskfile_darwin.yaml  Taskfile_windows.yaml
school-search/: Cargo.toml
school-search/src/: app.rs  lib.rs  main.rs  search.rs  world_universities_and_domains.json
school-search/wix/: License.rtf  main.wxs
scripts/: Cargo.toml
wix/: main.wxs
